[package]
name = "serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.3.0"
actix-session = "0.4.0"
actix-web-httpauth = "3.0.1"
bcrypt = "0.10.1"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["full"] }
